<resources>
    <string name="app_name">inovacion_2026</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_historial">Historial de riegos</string>
    <string name="menu_pronostico">Pronosticos del clima</string>
    <string name="menu_gestion_plantas">Gestión de plantas</string>
    

    <string name="temperatura">Temperatura</string>
    <string name="clima">Clima</string>
    <string name="humedad">Humedad</string>
    <string name="alerta">Alerta</string>
    <string name="lluvia">Lluvia</string>
    <string name="ultimo_dia_riego">Último día de riego</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="espera_datos">---</string>
    <string name="grados_centigrados">°C</string>

    <string name="titulo_historial">Historial de Riego</string>


    <string name="titulo_pronostico">Pronostico del Clima</string>
    <string name="proximas_horas">Próximas Horas</string>
    <string name="proximos_3_dias">Próximos 3 días</string>"
    <string name="hora">Fecha y Hora</string>
    <string name="temp_maxima">Máxima</string>
    <string name="minima">Minima</string>
    <string name="fecha">Fecha</string>


</resources>