<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_historial"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_historial" />
        <item
            android:id="@+id/nav_pronostico"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_pronostico" />
        <item
            android:id="@+id/nav_gestion"
            android:icon="@drawable/conf"
            android:title="@string/menu_gestion_plantas" />
    </group>
</menu>