<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/txt_humedad_sensor"
        android:layout_width="124dp"
        android:layout_height="52dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="150dp"
        android:text="@string/espera_datos"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/txt_lluvia_sensor" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="124dp"
        android:layout_height="52dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="96dp"
        android:text="@string/humedad"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/txt_clima"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/txt_clima"
        android:layout_width="124dp"
        android:layout_height="52dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="150dp"
        android:text="@string/espera_datos"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/txt_lluvia_sensor" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="124dp"
        android:layout_height="52dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="15dp"
        android:text="@string/clima"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/txt_clima"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/txt_lluvia_sensor"
        android:layout_width="176dp"
        android:layout_height="52dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="98dp"
        android:text="@string/espera_datos"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/txt_temperatura_sensor" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="124dp"
        android:layout_height="52dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="30dp"
        android:text="@string/lluvia"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/txt_lluvia_sensor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/txt_ultimo_hora_riego"
        android:layout_width="124dp"
        android:layout_height="52dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="26dp"
        android:text="@string/espera_datos"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_ultimo_dia_riego"
        app:layout_constraintTop_toBottomOf="@+id/txt_lluvia_sensor" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="124dp"
        android:layout_height="52dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="35dp"
        android:text="@string/ultimo_dia_riego"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/txt_ultimo_dia_riego"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/txt_ultimo_dia_riego"
        android:layout_width="124dp"
        android:layout_height="52dp"
        android:layout_marginTop="35dp"
        android:text="@string/espera_datos"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/txt_ultimo_hora_riego"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/txt_humedad_sensor" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="149dp"
        android:layout_marginTop="624dp"
        android:layout_marginEnd="262dp"
        android:layout_marginBottom="88dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="161dp"
        android:layout_height="49dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="48dp"
        android:text="@string/bienvenido"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_alerta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="124dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="26dp"
        android:text="@string/grados_centigrados"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_temperatura_sensor"
        app:layout_constraintTop_toBottomOf="@+id/txt_alerta" />

    <TextView
        android:id="@+id/txt_temperatura_sensor"
        android:layout_width="124dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:text="@string/espera_datos"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/txt_alerta" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="124dp"
        android:layout_height="52dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="45dp"
        android:text="@string/temperatura"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/txt_temperatura_sensor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/txt_alerta"
        android:layout_width="245dp"
        android:layout_height="81dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="29dp"
        android:text="@string/espera_datos"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="124dp"
        android:layout_height="52dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="1dp"
        android:text="@string/alerta"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/txt_alerta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>